# Practice-Cmake

./: .gitignore  CMakeLists.txt
lib/: cmakeLists.txt  computer.cpp  computer.h
lib/include/: computer.hpp
src/: main.cpp
